# mycelis

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  interop.yml
crates/mycelia-core/: Cargo.toml
crates/mycelia-core/src/: attestation.rs  domain.rs  ids.rs  lib.rs  message.rs  peer.rs  pow.rs  registry.rs  transport.rs  wire.rs
crates/mycelia-dht/: Cargo.toml
crates/mycelia-dht/src/: lib.rs
crates/mycelia-gateway/: Cargo.toml
crates/mycelia-gateway/src/: lib.rs
crates/mycelia-leaf/: Cargo.toml
crates/mycelia-leaf/src/: lib.rs
crates/mycelia-node/: Cargo.toml
crates/mycelia-node/examples/: rns_tcp_ping.rs
crates/mycelia-node/src/: config.rs  control.rs  discovery.rs  lib.rs  mock_transport.rs  rns_ifaces.rs  rns_transport.rs  runtime.rs  state.rs
crates/mycelia-node/tests/: communities.rs  e2e_domain_service.rs  gateway_config.rs  persist_reload.rs  rns_substrate_spike.rs  substrate_spike.rs
crates/mycelisd/: Cargo.toml
crates/mycelisd/src/: main.rs
docs/: PRD.md  implementation-plan.md  interfaces.md  landscape-survey.md  leaf-hardware.md  market-and-research.md  substrate-notes.md  tech-stack.md  wire-format.md
scripts/: check-leaf-deps.sh
tools/interop/: README.md  requirements.txt  smoke_announce.py
