[workspace]
resolver = "2"
members = [
    "crates/mycelia-core",
    "crates/mycelia-node",
    "crates/mycelisd",
    "crates/mycelia-dht",
    "crates/mycelia-gateway",
    "crates/mycelia-leaf",
]
default-members = [
    "crates/mycelia-core",
    "crates/mycelia-node",
    "crates/mycelisd",
    "crates/mycelia-dht",
    "crates/mycelia-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.97.1"
license = "MIT"
authors = ["Mycelia contributors"]
repository = "https://github.com/hovhannest/mycelis"

[workspace.dependencies]
mycelia-core = { path = "crates/mycelia-core", default-features = false }
mycelia-node = { path = "crates/mycelia-node" }
mycelia-dht = { path = "crates/mycelia-dht" }
mycelia-gateway = { path = "crates/mycelia-gateway" }
mycelia-leaf = { path = "crates/mycelia-leaf" }

heapless = "0.8"
log = "0.4"
# Same ecosystem as FreeTAKTeam / rns-crypto (Ed25519); used for compact attestations in core.
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
rand_core = { version = "0.6", default-features = false }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }

tokio = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mdns-sd = "0.20"
libp2p = { version = "0.56", default-features = false }
bytes = "1"
hex = "0.4"
tempfile = "3"
