[package]
name = "mycelia-dht"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Optional libp2p Kad DHT Internet locator (full profile only)"

[dependencies]
libp2p = { workspace = true, features = ["kad", "tcp", "noise", "yamux", "dns", "tokio", "identify", "macros"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
futures = "0.3"
tracing = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net", "sync", "test-util"] }
