[package]
name = "mycelia-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Optional SOCKS5 gateway (full profile, off by default)"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
mycelia-core = { workspace = true, features = ["std", "crypto"] }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "test-util"] }
